--- a/intro-to-Vue-3/index.html
+++ b/intro-to-Vue-3/index.html
@@ -15,8 +15,7 @@
       <div class="cart">Cart({{ cart.length }})</div>
       <product-display
         :premium="premium"
-        @add-to-cart="updateCart"
-        @remove-from-cart="removeById"></product-display>
+        @add-to-cart="updateCart"></product-display>
     </div>
 
     <!-- Import App -->
@@ -24,6 +23,8 @@
 
     <!-- Import Components -->
     <script src="./components/ProductDisplay.js"></script>
+    <script src="./components/ReviewForm.js"></script>
+    <script src="./components/ReviewList.js"></script>
 
     <!-- Mount App -->
     <script>
